workloads/tetris-react/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetris
spec:
  ingressClassName: traefik
  rules:
  - host: tetris.skylarhoughtongithub.local
    http:
      paths:
      - backend:
          service:
            name: tetris-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.80.101
    - ip: 192.168.80.102
    - ip: 192.168.80.103
    - ip: 192.168.80.111
    - ip: 192.168.80.112
    - ip: 192.168.80.113
